	Schedule.getTimestamp now defines before-simulation times as being
		being less than EPOCH.
	Slight bug fixes to MiniHistogram
	Added new HowTo for hiding the Console, made slight modifications to
		Display2D and Display3D to accommodate this.
	Bug in MutableDouble3D and Double3D's hash value wasn't considering
		x values as part of the hash.
	Added some more distance methods to MutableDouble2D and MutableDouble3D
	Changed all JTextFields in the charting facility to PropertyFields.  This
		is much cleaner and shorter, and works better too.
	Set Display2D.innerDisplay to be opaque.  As a result, many 2D
		simulations run at up to twice their previous visualization speed.
		This necessitated setting the background for the Display2D scroll
		pane as well.  For good measure, also set the MiniHistogram to be
		an opaque JComponent instead of a non-opaque JPanel.
	Added a Display3D.destroySceneGraph() method and modified all 3D apps to
		call this new method prior to creating any portrayals (basically
		to call it at the beginning of setupPortrayals).  This unhooks
		the scene graph so any shared Java3D geometry isn't live any more
		and we don't get any Java3D complaints when we're just making new
		portrayals.  Updated the tutorials as well to reflect the new
		arrangement.
	Made the geometry of SpherePortrayal3D, ConePortrayal3D, and 
		CylinderPortrayal3D shared.  Previously we were worried this would
		also share the picked objects or the colors among the nodes, but
		it doesn't appear to be the case.  Will only work if destroySceneGraph()
		is properly called first.
	Fixed bugs in EdgePortrayal3D subclasses: model updating wasn't implemented
		so if you added or deleted an edge, it wasn't reflected in the
		scene.  Also we moved the pickability-setting capabilities into the
		constructors for the Java3D objects because it tickled capability bit
		problems elsewhere somewhere deep inside Java3D.  
	Added propertyinspector.classes to the Makefile's jar builder